--- a/proj2/index.html
+++ b/proj2/index.html
@@ -7,11 +7,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-		<script>
-  $( function() {
-    $( "#accordion" ).accordion();
-  } );
-		</script>
+		<script src="scripts.js"></script>
 	</head>
 	<div id="containor">
 	<div id="header">
@@ -32,7 +28,8 @@
 			</div>
 			<div id="Films" class="tabcontent">
 				<div id="hint">
-					<p>example: Castle in the Sky</p>
+					<!--<p>example: Castle in the Sky</p>-->
+					<p>search not implemented</p>
 				</div>
 				<div id="serch_space">
 					<input v-model="search">
@@ -86,7 +83,8 @@
 			</div> <!--/Films-->
 			<div id="Characters" class="tabcontent">
 				<div id="hint">
-					<p>example: Cat King</p>
+					<!--<p>example: Cat King</p>-->
+					<p>search not implemented</p>
 				</div>
 				<div id="serch_space">
 					<input v-model="search">
@@ -101,7 +99,8 @@
 			</div>
 			<div id="Locations" class="tabcontent">
 				<div id="hint">
-					<p>example: Irontown</p>
+					<!--<p>example: Irontown</p>-->
+					<p>search not implemented</p>
 				</div>
 				<div id="serch_space">
 					<input v-model="search">
